<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="TcoTixonFeedingTask" Id="{3c2fc736-bc66-08d9-20ec-4296aae9c0c4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC ABSTRACT TcoTixonFeedingTask EXTENDS TcoCore.TcoTask 
VAR_IN_OUT
    inoConfig 	: TcoTixonStep_Config_v_1_x_x;
	inoControl 	: TcoTixonStep_Control_v_1_x_x;
	inoStatus 	: TcoTixonStep_Status_v_1_x_x;	
END_VAR
VAR
	_errorMessage:TcoCore.TcoMessenger(THIS^);
    {attribute 'hide'} 
	_progress : INT := 0;
    {attribute 'hide'} 
	_infoTimer :  TON;
    {attribute 'hide'} 
	_errorTimer :  TON;
	{attribute 'hide'} 
	_timer :  TON;
    {attribute 'hide'} 
	_varInfo : __SYSTEM.VAR_INFO;
    {attribute 'hide'} 
	_sb : TcoCore.StringBuilder;
	{attribute 'hide'} 
	_autoRestore : BOOL;
	

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="AutoRestore" Id="{b2c74594-a4f6-05fc-1e25-48d1cf294532}">
      <Declaration><![CDATA[PROPERTY PUBLIC AutoRestore : BOOL]]></Declaration>
      <Get Name="Get" Id="{efd33750-311a-075a-3a08-942e3ab53a2c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[AutoRestore:=_autoRestore;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{df96d8c9-1856-0e3a-2f28-997fd0542776}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_autoRestore:=AutoRestore;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="CallTimers" Id="{7804249d-a130-0f19-3a07-987b52f1878b}">
      <Declaration><![CDATA[METHOD CallTimers
VAR_INPUT
	inValue : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF  __ISVALIDREF(inoConfig) AND THIS^.inoConfig.ErrorTime <> T#0S OR NOT inValue THEN  
_errorTimer(IN := inValue, PT := THIS^.inoConfig.ErrorTime);
END_IF;
IF  __ISVALIDREF(inoConfig) AND THIS^.inoConfig.InfoTime <>T#0S OR NOT inValue THEN  
_infoTimer(IN := inValue, PT := THIS^.inoConfig.InfoTime);
END_IF;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Restore" Id="{ad9a6d70-9aaa-0604-0057-a45c21976679}">
      <Declaration><![CDATA[(*~
	<docu>
		<summary>
			Restores this instance to the Ready state. Can be called explicitly or from within one of the restore mechanisms.
			<para>
				See also <see cref="PlcDocu.TcoCore.TcoTask.AutoRestorable()"/>
			</para>
		</summary>			
	</docu>	
~*)
METHOD Restore : ITcoRestorable]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.Restore();
_progress := 0;
_timer(In:=FALSE);
CallTimers(FALSE);
Messenger.UnPin();
_errorMessage.UnPin();
_autoRestore:=false;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>